--- a/src/components/Profile/Profile.module.css
+++ b/src/components/Profile/Profile.module.css
@@ -1,3 +1,10 @@
-img {
+.head img {
   width: 1000px;
+}
+
+/* Размер изображения для аватаров всех отправителей */
+.item img {
+  width: 50px;
+  height: 50px;
+  border-radius: 30px;
 }
